--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "axios": "^1.2.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-hook-form": "^7.41.0",
     "react-router-dom": "^6.4.5",
     "react-toastify": "^9.1.1",
     "styled-components": "^5.3.6",
